fix css version mobile + navbar & footer version desktop

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -42,3 +42,17 @@ h2 .pictoFooter {
 h2.alignpictos {
   margin-right: 0.7rem;
 }
+@media screen and (min-width: 769px) {
+  .titleslogan {
+    font-size: 1rem;
+  }
+
+  .pictoreseaux {
+    height: 3rem;
+    width: 3rem;
+    border-radius: 15rem;
+  }
+  h2 .pictoFooter {
+    height: 1.5rem;
+  }
+}
