--- a/frontend/src/pages/Agenda.css
+++ b/frontend/src/pages/Agenda.css
@@ -27,3 +27,9 @@
 .Agenda {
   text-align: center;
 }
+
+.listeagenda {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
